--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 
 <head>
-
     <head lang="vi-VN">
         <meta charset="utf-8">
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Shop Acc ManLi</title>
         <meta name="keywords" content="Manlistore.vn, Mankjxe, thông tin thanh toán website">
         <meta name="description" content="Trang xem những toàn khoản vẫn còn ở Shop Acc Văn Mạnh, thoải mái lựa chọn.">
