--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </head>
 
     <body>
+        <div class="wrapper">
         <section id="Projects">
             <div class="container">
                 <div class="items-links">
@@ -241,6 +242,7 @@
             </div>
         </section>
         <script src="./script.js "></script>
+     </div>
     </body>
     <footer class="footer">
         <p>© Man Li Store | ALL RIGHTS RESERVED</p>
