--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <body>
         <div class="wrapper">
             <section id="Projects">
-                <div class="container">
+            <div class="container">
+                <div class="banner-img">
+                    <img src="./img/bannerprofile.png" alt="">
+                </div>
                     <div class="items-links">
                         <span class="item-link menu-active" data-name="all">ALL LIST</span>
                         <span class="item-link" data-name="acc1m">ACC DƯỚI 1M</span>
