--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section id="Projects">
             <div class="container">
                 <div class="banner-img">
-                    <img src="./img/bannerprofile.png" alt="">
+                    <img src="./img/bannerprofile.png" alt="Banner Profile">
                 </div>
                     <div class="items-links">
                         <span class="item-link menu-active" data-name="all">ALL LIST</span>
