--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <div class="content">
         <p>Welcome to Man Li Store!</p>
+                <p>Các bạn có thể tham khảo acc của mình ở phía dưới nha <3!</p>
     </div>
                     <div class="items-links">
                         <span class="item-link menu-active" data-name="all">ALL LIST</span>
