--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <body>
         <div class="wrapper">
             <section id="Projects">
-<div class="container">
-    <div class="banner-img">
-        <img src="./img/bannerprofile.png" alt="Banner Profile">
-    </div>
-    <div class="content">
-        <p>Welcome to Man Li Store!</p>
-                <p>Các bạn có thể tham khảo acc của mình ở phía dưới nha <3!</p>
-    </div>
+                <div class="container">
+                    <div class="banner-img">
+                        <img src="./img/bannerprofile.png" alt="Banner Profile">
+                    </div>
+                    <div class="content">
+                        <p>Welcome to Man Li Store!
+                        Các bạn có thể tham khảo acc của mình ở phía dưới nha <3</p>
+                   </div>
                     <div class="items-links">
                         <span class="item-link menu-active" data-name="all">ALL LIST</span>
                         <span class="item-link" data-name="acc1m">ACC DƯỚI 1M</span>
