--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:locale" content="vi-VN" />
         <meta property="og:title" content="Shop Acc ManLi">
         <link rel="shortcut icon" href="./img/MANLILOGO.png" />
-        <meta property="og:image" content="./img/BANNER PROFILE - ISO.png">
+        <meta property="og:image" content="./img/bannerprofile.png">
         <link rel="stylesheet" href="./style.css">
     </head>
 
