--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                         </div>
                     </div>
                     <div class="project-img" data-name="acc1m">
-                        <img src="https://cdn.discordapp.com/attachments/1102497486674862085/1307375271040516216/237.600k.png?ex=673a139a&is=6738c21a&hm=259db8495e40742411be06d195518082f1d7ef8c56cb86d79af6655098d7da1a&" alt=" ">
+                        <img src="https://imgur.com/undefined.png" alt=" ">
                         <div class="overlay">
                             <h4>Acc 237 - Giá: 600.000đ</h4>
                             <div class="action-aria">
-                                <a href="https://cdn.discordapp.com/attachments/1102497486674862085/1307375271040516216/237.600k.png?ex=673a139a&is=6738c21a&hm=259db8495e40742411be06d195518082f1d7ef8c56cb86d79af6655098d7da1a&" class="btn">Xem Ảnh</a>
+                                <a href="https://imgur.com/undefined.png"" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
                             </div>
                         </div>
