--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                         </div>
                     </div>
                     <div class="project-img" data-name="acc1m">
-                        <img src="https://imgur.com/undefined" alt=" ">
+                        <img src="https://imgur.com/izXPFt7.png" alt=" ">
                         <div class="overlay">
                             <h4>Acc 237 - Giá: 600.000đ</h4>
                             <div class="action-aria">
-                                <a href="https://imgur.com/undefined"" class="btn">Xem Ảnh</a>
+                                <a href="https://imgur.com/izXPFt7.png"" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
                             </div>
                         </div>
