--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <meta property="og:description" content="Trang xem những toàn khoản vẫn còn ở Shop Acc Văn Mạnh, thoải mái lựa chọn.">
         <meta property="og:locale" content="vi-VN" />
         <meta property="og:title" content="Shop Acc ManLi">
-        <link rel="shortcut icon" href="./img/MANLILOGO.png" />
+        <link rel="shortcut icon" href="https://i.imgur.com/fYJQ4Y1.png" />
+        <meta property="og:image" content="https://i.imgur.com/jPXGw8v.png">
         <link rel="stylesheet" href="./style.css">
     </head>
 
