--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="Trang xem những toàn khoản vẫn còn ở Shop Acc Văn Mạnh, thoải mái lựa chọn.">
         <meta property="og:locale" content="vi-VN" />
         <meta property="og:title" content="Shop Acc ManLi">
-        <link rel="shortcut icon" href="https://i.imgur.com/fYJQ4Y1.png" />
+        <link rel="shortcut icon" href="https://i.imgur.com/N8XIT5I.png" />
         <meta property="og:image" content="https://i.imgur.com/jPXGw8v.png">
         <link rel="stylesheet" href="./style.css">
     </head>
@@ -31,6 +31,36 @@
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
                 <div class="gallery">
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/hy3nqL0.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 239 - Giá: 850.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/hy3nqL0.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/74Bflk6.pngg" alt="">
+                        <div class="overlay">
+                            <h4>Acc 238 - Giá: 300.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/74Bflk6.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc1m">
+                        <img src="./img/132.1m.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 132 - Giá: 1.000.000đ</h4>
+                            <div class="action-aria">
+                                <a href="./img/132.1m.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="project-img" data-name="acc1m">
                         <img src="./img/139.750k.png" alt=" ">
                         <div class="overlay">
