--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
                 <div class="gallery">
+                    /*-------------*/
+                    <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/maWh2tk.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 240 - Giá: 1.300.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/maWh2tk.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="project-img" data-name="acc2m">
                         <img src="https://i.imgur.com/fAMhnVf.png" alt="">
                         <div class="overlay">
