--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 </div>
                 <div class="gallery">
                     <div class="project-img" data-name="acc2m">
-                        <img src="https://i.imgur.com/maWh2tk.png" alt="">
+                        <img src="https://i.imgur.com/xEBWVQo.png" alt="">
                         <div class="overlay">
-                            <h4>Acc 240 - Giá: 1.300.000đ</h4>
+                            <h4>Acc 241 - Giá: 1.400.000đ</h4>
                             <div class="action-aria">
                                 <a href="https://i.imgur.com/maWh2tk.png" class="btn">Xem Ảnh</a>
-                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                                <a href="https://i.imgur.com/xEBWVQo.png" class="btn btn-light">Contact</a>
                             </div>
                         </div>
                     </div>
