--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                         <div class="overlay">
                             <h4>Acc 241 - Giá: 1.400.000đ</h4>
                             <div class="action-aria">
-                                <a href="https://i.imgur.com/maWh2tk.png" class="btn">Xem Ảnh</a>
-                                <a href="https://i.imgur.com/xEBWVQo.png" class="btn btn-light">Contact</a>
+                                <a href="https://i.imgur.com/xEBWVQo.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
                             </div>
                         </div>
                     </div>
