--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <span class="item-link" data-name="acc2m">ACC DƯỚI 2M</span>
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
-                <div class="gallery
+                <div class="gallery">
                     <div class="project-img" data-name="acc1m">
                         <img src="https://i.imgur.com/QQnY4f3.png" alt="">
                         <div class="overlay">
