--- a/index.html
+++ b/index.html
@@ -31,6 +31,66 @@
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
                 <div class="gallery">
+                    <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/gao6ARu.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 249 - Giá: 1.800.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/gao6ARu.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/3S98d86.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 248 - Giá: 1.000.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/3S98d86.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/RA1FAUC.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 247 - Giá: 500.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/RA1FAUC.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc3m">
+                        <img src="https://i.imgur.com/CYAeN3T.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 243 - Giá: 3.160.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/CYAeN3T.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/BCzKkKb.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 246 - Giá: 650.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/BCzKkKb.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/hJhj7Gt.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 245 - Giá: 800.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/hJhj7Gt.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="project-img" data-name="acc3m">
                         <img src="https://i.imgur.com/CYAeN3T.png" alt="">
                         <div class="overlay">
