--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta property="og:locale" content="vi-VN" />
         <meta property="og:title" content="Shop Acc ManLi">
         <link rel="shortcut icon" href="https://i.imgur.com/N8XIT5I.png" />
-        <meta property="og:image" content="https://i.imgur.com/tOMPXiX.png">
+        <meta property="og:image" content="https://i.imgur.com/3dlzTfz.png">
         <link rel="stylesheet" href="./style.css">
     </head>
 
@@ -22,7 +22,7 @@
         <section id="Projects">
             <div class="container">
                 <div class="banner-img">
-                    <img src="https://i.imgur.com/tOMPXiX.png" alt="Banner Profile" loading="lazy">
+                    <img src="https://i.imgur.com/3dlzTfz.png" alt="Banner Profile" loading="lazy">
                 </div>
                 <div class="items-links">
                     <span class="item-link menu-active" data-name="all">ALL LIST</span>
