--- a/index.html
+++ b/index.html
@@ -31,6 +31,36 @@
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
                 <div class="gallery">
+                    <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/cIyegpB.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 252 - Giá: 2.400.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/cIyegpB.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc3m">
+                        <img src="https://i.imgur.com/WPudcRa.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 251 - Giá: 3.200.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/WPudcRa.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc3m">
+                        <img src="https://i.imgur.com/nZG2AaF.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 250 - Giá: 3.000.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/nZG2AaF.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="project-img" data-name="acc3m">
                         <img src="https://i.imgur.com/CYAeN3T.png" alt="">
                         <div class="overlay">
