--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="project-img" data-name="acc2m">
                         <img src="./img/179.2m.png" alt=" ">
                         <div class="overlay">
-                            <h4>Acc 179 - Giá: 2.000.000đ</h4>
+                            <h4>Acc 179 - Đang Góp</h4>
                             <div class="action-aria">
                                 <a href="./img/179.2m.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
@@ -224,7 +224,7 @@
                     <div class="project-img" data-name="acc1m">
                         <img src="./img/209.444k.png" alt=" ">
                         <div class="overlay">
-                            <h4>Acc 209 - Giá: 444.000đ</h4>
+                            <h4>Acc 209 - Đang Góp</h4>
                             <div class="action-aria">
                                 <a href="./img/209.444k.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
