--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
                 <div class="gallery">
-                    <div class="project-img" data-name="acc3m">
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/1201Mab.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 253 - Giá: 850.000đ</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/1201Mab.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
                         <img src="https://i.imgur.com/YYRKhED.png" alt="">
                         <div class="overlay">
                             <h4>Acc 207 - Giá: 3.000.000đ</h4>
