--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="project-img" data-name="acc3m">
                         <img src="https://i.imgur.com/YYRKhED.png" alt="">
                         <div class="overlay">
                             <h4>Acc 207 - Giá: 3.000.000đ</h4>
