--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
                 <div class="gallery">
+                    <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/femNO8f.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 255 - Giá: 1.800.000 ATM</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/femNO8f.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/XEAgfSf.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 254 - Giá: 450.000 ATM</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/XEAgfSf.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>                    
                     <div class="project-img" data-name="acc1m">
                         <img src="https://i.imgur.com/1201Mab.png" alt="">
                         <div class="overlay">
@@ -67,16 +87,6 @@
                             <h4>Acc 251 - Giá: 3.200.000đ</h4>
                             <div class="action-aria">
                                 <a href="https://i.imgur.com/WPudcRa.png" class="btn">Xem Ảnh</a>
-                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-img" data-name="acc3m">
-                        <img src="https://i.imgur.com/nZG2AaF.png" alt="">
-                        <div class="overlay">
-                            <h4>Acc 250 - Giá: 3.000.000đ</h4>
-                            <div class="action-aria">
-                                <a href="https://i.imgur.com/nZG2AaF.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
                             </div>
                         </div>
@@ -211,16 +221,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-img" data-name="acc1m">
-                        <img src="./img/202.550K.png" alt=" ">
-                        <div class="overlay">
-                            <h4>Acc 202 - Giá: 550.000đ</h4>
-                            <div class="action-aria">
-                                <a href="./img/202.550K.png" class="btn">Xem Ảnh</a>
-                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
-                            </div>
-                        </div>
-                    </div>
                     <div class="project-img" data-name="acc3m">
                         <img src="./img/205.2m1.png" alt=" ">
                         <div class="overlay">
@@ -234,7 +234,7 @@
                     <div class="project-img" data-name="acc1m">
                         <img src="./img/209.444k.png" alt=" ">
                         <div class="overlay">
-                            <h4>Acc 209 - Đang Góp</h4>
+                            <h4>Acc 209 - 444.000 ATM</h4>
                             <div class="action-aria">
                                 <a href="./img/209.444k.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
@@ -294,7 +294,7 @@
                     <div class="project-img" data-name="acc2m">
                         <img src="./img/227.1m1.png" alt=" ">
                         <div class="overlay">
-                            <h4>Acc 227 - Giá: 1.100.000đ</h4>
+                            <h4>Acc 227 - Đang Góp</h4>
                             <div class="action-aria">
                                 <a href="./img/227.1m1.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
