--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="project-img" data-name="acc2m">
                         <img src="https://i.imgur.com/femNO8f.png" alt="">
                         <div class="overlay">
-                            <h4>Acc 255 - Giá: 1.800.000 ATM</h4>
+                            <h4>Acc 255 - Đang Góp</h4>
                             <div class="action-aria">
                                 <a href="https://i.imgur.com/femNO8f.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
