--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
                 </div>
                 <div class="gallery">
                     <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/bu1wwnX.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 257 - 1.400.000 ATM</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/bu1wwnX.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>         
+                    <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/zv6j666.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 256 - 1.450.000 ATM</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/zv6j666.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class="project-img" data-name="acc2m">
                         <img src="https://i.imgur.com/femNO8f.png" alt="">
                         <div class="overlay">
                             <h4>Acc 255 - Đang Góp</h4>
