--- a/index.html
+++ b/index.html
@@ -31,10 +31,20 @@
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
                 <div class="gallery">
+                    <div class="project-img" data-name="acc1m">
+                        <img src="https://i.imgur.com/fuq9KXy.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 259 - 370.000 ATM</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/fuq9KXy.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>   
                     <div class="project-img" data-name="acc2m">
                         <img src="https://i.imgur.com/bu1wwnX.png" alt="">
                         <div class="overlay">
-                            <h4>Acc 257 - 1.400.000 ATM</h4>
+                            <h4>Acc 257 - Đang Trả Góp</h4>
                             <div class="action-aria">
                                 <a href="https://i.imgur.com/bu1wwnX.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
@@ -54,23 +64,13 @@
                     <div class="project-img" data-name="acc2m">
                         <img src="https://i.imgur.com/femNO8f.png" alt="">
                         <div class="overlay">
-                            <h4>Acc 255 - Đang Góp</h4>
+                            <h4>Acc 255 - 1.800.000 ATM</h4>
                             <div class="action-aria">
                                 <a href="https://i.imgur.com/femNO8f.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="project-img" data-name="acc1m">
-                        <img src="https://i.imgur.com/XEAgfSf.png" alt="">
-                        <div class="overlay">
-                            <h4>Acc 254 - Giá: 450.000 ATM</h4>
-                            <div class="action-aria">
-                                <a href="https://i.imgur.com/XEAgfSf.png" class="btn">Xem Ảnh</a>
-                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
-                            </div>
-                        </div>
-                    </div>                    
+                    </div>      
                     <div class="project-img" data-name="acc1m">
                         <img src="https://i.imgur.com/1201Mab.png" alt="">
                         <div class="overlay">
@@ -141,16 +141,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-img" data-name="acc1m">
-                        <img src="https://i.imgur.com/BCzKkKb.png" alt="">
-                        <div class="overlay">
-                            <h4>Acc 246 - Giá: 650.000đ</h4>
-                            <div class="action-aria">
-                                <a href="https://i.imgur.com/BCzKkKb.png" class="btn">Xem Ảnh</a>
-                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
-                            </div>
-                        </div>
-                    </div>
                     <div class="project-img" data-name="acc2m">
                         <img src="https://i.imgur.com/xEBWVQo.png" alt="">
                         <div class="overlay">
@@ -204,7 +194,7 @@
                     <div class="project-img" data-name="acc2m">
                         <img src="./img/176.1m7.png" alt=" ">
                         <div class="overlay">
-                            <h4>Acc 176 - Giá: 1.700.000đ</h4>
+                            <h4>Acc 176 - Giá: Đang Trả Góp</h4>
                             <div class="action-aria">
                                 <a href="./img/176.1m7.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
