--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="project-img" data-name="acc2m">
                         <img src="./img/176.1m7.png" alt=" ">
                         <div class="overlay">
-                            <h4>Acc 176 - Giá: Đang Trả Góp</h4>
+                            <h4>Acc 176 - Đang Trả Góp</h4>
                             <div class="action-aria">
                                 <a href="./img/176.1m7.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
