--- a/index.html
+++ b/index.html
@@ -31,12 +31,22 @@
                     <span class="item-link" data-name="acc3m">ACC TRÊN 2M</span>
                 </div>
                 <div class="gallery">
-                    <div class="project-img" data-name="acc1m">
-                        <img src="https://i.imgur.com/fuq9KXy.png" alt="">
+                    <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/jGiZd83.png" alt="">
                         <div class="overlay">
-                            <h4>Acc 259 - 370.000 ATM</h4>
+                            <h4>Acc 261 - 1.600.000 ATM</h4>
                             <div class="action-aria">
-                                <a href="https://i.imgur.com/fuq9KXy.png" class="btn">Xem Ảnh</a>
+                                <a href="https://i.imgur.com/jGiZd83.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>   
+                    <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/WpyHExA.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 260 - 1.450.000 ATM</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/WpyHExA.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
                             </div>
                         </div>
@@ -91,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-img" data-name="acc2m">
+                    <div class="project-img" data-name="acc3m">
                         <img src="https://i.imgur.com/cIyegpB.png" alt="">
                         <div class="overlay">
                             <h4>Acc 252 - Giá: 2.400.000đ</h4>
