--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="project-img" data-name="acc2m">
                         <img src="./img/226.1m05.png" alt=" ">
                         <div class="overlay">
-                            <h4>Đang Góp</h4>
+                            <h4>226 - 1.050.000 ATM</h4>
                             <div class="action-aria">
                                 <a href="./img/226.1m05.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
