--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="project-img" data-name="acc1m">
                         <img src="https://i.imgur.com/1201Mab.png" alt="">
                         <div class="overlay">
-                            <h4>Acc 253 - Giá: 850.000đ</h4>
+                            <h4>Acc 253 - Đang Trả Góp</h4>
                             <div class="action-aria">
                                 <a href="https://i.imgur.com/1201Mab.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
@@ -157,16 +157,6 @@
                             <h4>Acc 241 - Giá: 1.400.000đ</h4>
                             <div class="action-aria">
                                 <a href="https://i.imgur.com/xEBWVQo.png" class="btn">Xem Ảnh</a>
-                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-img" data-name="acc1m">
-                        <img src="https://i.imgur.com/hy3nqL0.png" alt="">
-                        <div class="overlay">
-                            <h4>Acc 239 - Giá: 850.000đ</h4>
-                            <div class="action-aria">
-                                <a href="https://i.imgur.com/hy3nqL0.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
                             </div>
                         </div>
