--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
                 </div>
                 <div class="gallery">
                     <div class="project-img" data-name="acc2m">
+                        <img src="https://i.imgur.com/tX6mwBu.png" alt="">
+                        <div class="overlay">
+                            <h4>Acc 262 - 2.200.000 ATM</h4>
+                            <div class="action-aria">
+                                <a href="https://i.imgur.com/tX6mwBu.png" class="btn">Xem Ảnh</a>
+                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
+                            </div>
+                        </div>
+                    </div>                       
+                    <div class="project-img" data-name="acc2m">
                         <img src="https://i.imgur.com/jGiZd83.png" alt="">
                         <div class="overlay">
                             <h4>Acc 261 - 1.600.000 ATM</h4>
                             <div class="action-aria">
                                 <a href="https://i.imgur.com/jGiZd83.png" class="btn">Xem Ảnh</a>
-                                <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
-                            </div>
-                        </div>
-                    </div>   
-                    <div class="project-img" data-name="acc2m">
-                        <img src="https://i.imgur.com/WpyHExA.png" alt="">
-                        <div class="overlay">
-                            <h4>Acc 260 - 1.450.000 ATM</h4>
-                            <div class="action-aria">
-                                <a href="https://i.imgur.com/WpyHExA.png" class="btn">Xem Ảnh</a>
                                 <a href="https://zalo.me/0332420815" class="btn btn-light">Contact</a>
                             </div>
                         </div>
