--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <meta property="og:description" content="Trang xem những toàn khoản vẫn còn ở Shop Acc Văn Mạnh, thoải mái lựa chọn.">
         <meta property="og:locale" content="vi-VN" />
         <meta property="og:title" content="Shop Acc ManLi">
-        <link rel="shortcut icon" href="https://i.imgur.com/N8XIT5I.png" />
-        <meta property="og:image" content="https://i.imgur.com/3dlzTfz.png">
+        <link rel="shortcut icon" href="img/LOGOver3.png" />
+        <meta property="og:image" content="img/LOGOver3.png">
         <link rel="stylesheet" href="./style.css">
     </head>
 
