--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="Trang xem những toàn khoản vẫn còn ở Shop Acc Văn Mạnh, thoải mái lựa chọn.">
         <meta property="og:locale" content="vi-VN" />
         <meta property="og:title" content="Shop Acc ManLi">
-        <link rel="shortcut icon" href="img/LOGOver3.png" />
+        <link rel="shortcut icon" href="img/LOGOver4.png" />
         <meta property="og:image" content="img/LOGOver3.png">
         <link rel="stylesheet" href="./style.css">
     </head>
@@ -22,7 +22,7 @@
         <section id="Projects">
             <div class="container">
                 <div class="banner-img">
-                    <img src="https://i.imgur.com/3dlzTfz.png" alt="Banner Profile" loading="lazy">
+                    <img src="img/LOGOver3.png" alt="Banner Profile" loading="lazy">
                 </div>
                 <div class="items-links">
                     <span class="item-link menu-active" data-name="all">ALL LIST</span>
