--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>    
                                                                          
                     <div class="project-img" data-name="acc2m">
-                        <img src="img/img/306.2m.png" alt="" loading="lazy">
+                        <img src="img/306.2m.png" alt="" loading="lazy">
                         <div class="overlay">
                             <h4>Acc 306 - SALE 1.800.000 ATM</h4>
                             <div class="action-aria">
